--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <th style="text-align: center;">NodeJS</th>
 <th style="text-align: center;">NodeJs forge</th>
 <th style="text-align: center;">WebCrypto</th>
+<th style="text-align: center;">Python</th>
 </tr>
 </thead>
 <tbody>
@@ -547,6 +548,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_initvector.md">generate a 16 byte long initvector</a></td>
@@ -557,6 +559,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_nonce.md">generate a 12 byte long nonce</a></td>
@@ -567,9 +570,11 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/base64_encoding_decoding.md">Base64 encoding &amp; decoding</a></td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -587,9 +592,11 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/sha256_hash.md">SHA256 hashing</a></td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -607,6 +614,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pbkdf2.md">PBKDF2 key derivation</a></td>
@@ -617,10 +625,12 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_key_generation.md">Generate RSA keys</a></td>
 <td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_key_generation.md">see explanation</a></td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -637,10 +647,12 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/ec_key_generation.md">Generate Elliptic keys</a></td>
 <td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/ec_key_generation.md">see explanation</a></td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -719,7 +731,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
-<td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_cbc_256_passphrase_string_encryption.md">CBC-mode passphrase String Encryption</a></td>
@@ -1105,7 +1117,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td style="text-align: center;"></td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/curve25519_key_generation.md">generate a curve 25519 key pair</a></td>
@@ -1185,7 +1197,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td style="text-align: center;"></td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_cryptobox_encryption_string.md">Libsodium crypto box authenticated hybrid string encryption</a></td>
@@ -1348,7 +1360,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </tr>
 </tbody>
 </table>
-<p>Last update: Feb. 07th 2021</p>
+<p>Last update: Feb. 09th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
