--- a/GenerateEd25519KeypairDerive/generateed25519keysderivation.html
+++ b/GenerateEd25519KeypairDerive/generateed25519keysderivation.html
@@ -32,7 +32,7 @@ my webpage <b>Argon 2 Password-Based Key Derivation Function</b></a><br>
 <textarea name="publicKeyBase64" id="publicKeyBase64" rows="2" cols="43">public key comes here</textarea>
 
 <h2>public key derivation from private key</h2>
-<p>pase private key (in Base64 encoding) or press "copy private key" button</p>
+<p>paste private key (in Base64 encoding) or press "copy private key" button</p>
 <textarea name="privateKeyDerivedBase64" id="privateKeyDerivedBase64" rows="2" cols="43">fwLfzd62n4JoeAQ9wZcjWJ3ckCjN+8cuLHfYa5YPOA5JbGwu/4Cdz3MtnFjLMP1QYpBti4HM7+6yAxDOF/IIVg==</textarea>
 <button onclick="copy()">copy private key</button> 
 <p>press the "derive public key" button to proceed:</p>
