--- a/index.html
+++ b/index.html
@@ -521,8 +521,9 @@ based on dark.css by Vladimir Epifanov
 <h2 id="general-information-and-overview">General information and overview</h2>
 <p>This is a series of cryptography articles that will show show how cryptography is done between different programming platforms. The sample programs do not attempt to be &quot;secure&quot; but explain how the crypto routines are compatible with other platforms.</p>
 <p>I'm trying to serve a broad spectrum of programming languages and actually I have solutions for these  frameworks: <strong>Java</strong>, <strong>PHP</strong>, <strong>C#</strong>, <strong>Javascript - CryptoJs</strong>, <strong>NodeJs Crypto</strong>,  <strong>NodeJs node-forge</strong>  and <strong>Python</strong> (for selected programs) as long the functionality is available on the platform. You can test all programs with online compilers to see what the output is and what happens when you change some parameters. For selected assignments there is a <strong>WebCrypto</strong> solution available, that will run in your (modern) browser. For very rare programs I provide an <a href="#readme-openssl"><strong>OpenSSL</strong></a> solution.</p>
-<p>Wouldn't it be nice having a library that could be used cross-platform wide to get cryptographic tasks done? Yes and the library is still there, it is the <a href="#readme-libsodium"><strong>Libsodium</strong></a> project and there are a lot of bindings available for all major frameworks. The algorithms in Libsodium differ from the other ones used in the cross-platform-project, therefore the Libsodium solutions are in a own section.
-A lot of solutions run with the built-in cryptographic modules but especially the Javascript-ones may need external libraries (pure Javascript will need e.g. &quot;CryptoJs&quot;, NodeJs has a built-in &quot;Crypto&quot; library or you can use &quot;node-forge&quot;).</p>
+<p>Wouldn't it be nice having a library that could be used cross-platform wide to get cryptographic tasks done? Yes and the library is still there, it is the <a href="#readme-libsodium"><strong>Libsodium</strong></a> project and there are a lot of bindings available for all major frameworks. The algorithms in Libsodium differ from the other ones used in the cross-platform-project, therefore the Libsodium solutions are in a own section.</p>
+<p>Sometimes you may have read about a &quot;JWT&quot; or &quot;JWT token&quot;, that is short form of a <strong>JSON web token</strong> or <strong>JWT</strong>. That are standardized signature and encryption schemes for a defined data exchange between different systems and frameworks. I provide some <a href="#readme-jwt"><strong>JWT web token</strong></a> solutions.</p>
+<p>A lot of solutions run with the built-in cryptographic modules but especially the Javascript-ones may need external libraries (pure Javascript will need e.g. &quot;CryptoJs&quot;, NodeJs has a built-in &quot;Crypto&quot; library or you can use &quot;node-forge&quot;).</p>
 <h3 id="general-routines">General routines</h3>
 <table>
 <thead>
@@ -1268,6 +1269,103 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </tr>
 </tbody>
 </table>
+<h3 id="jwt-json-web-token-solutions"><a name="readme-jwt"></a>JWT JSON web token solutions</h3>
+<table>
+<thead>
+<tr>
+<th>Solution</th>
+<th>Description</th>
+<th style="text-align: center;">Java</th>
+<th style="text-align: center;">PHP</th>
+<th style="text-align: center;">C#</th>
+<th style="text-align: center;">NodeJS</th>
+<th style="text-align: center;">Browser</th>
+<th style="text-align: center;">Python</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_structure.md">structure of a JSON web token (JWT)</a></td>
+<td>explains the general structure of a JWT</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr>
+<td>JSON web token JWA algorithms</td>
+<td>standardized algorithms for JWT</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jwk_keys.md">JSON Web JWK keys</a></td>
+<td>standardized key format for JWT</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jws_rs256_signature.md">JSON web signature (JWS) using RS256 algorithm</a></td>
+<td>sign a JWT with a RSA key, PKCS1.5 padding and SHA-256 hashing</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+</tr>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jws_ps256_signature.md">JSON web signature (JWS) using PS256 algorithm</a></td>
+<td>sign a JWT with a RSA private key, RSASSA-PSS + MGF1 with SHA-256 and SHA-256 hashing</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+</tr>
+<tr>
+<td>JSON web signature (JWS) using RSxxx &amp; PSxxx algorithms (verify only)</td>
+<td>verify a JWT with a RSA public key, PKCS1.5 &amp; SSA-PSS padding and SHA-256/384/512 hashing</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">❌</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">❌</td>
+</tr>
+<tr>
+<td>JSON web encryption (JWE) using RSA-OAEP-256 with A256GCM algorithm</td>
+<td></td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+</tr>
+<tr>
+<td>JSON web encryption (JWE)</td>
+<td></td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
+</tr>
+</tbody>
+</table>
 <h3 id="elliptic-curve-encryption">Elliptic curve encryption</h3>
 <table>
 <thead>
@@ -1281,7 +1379,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </tr>
 </thead>
 </table>
-<p>planned in future</p>
+<p>not planned in future</p>
 <h3 id="which-platforms-are-supported-at-the-moment">Which platforms are supported at the moment?</h3>
 <p>I'm using an IDE for Java and PHP but for the other ones I'm using online compiler like <a href="https://repl.it/">https://repl.it/</a>. Please don't ask if the programs will run on your system with a lower or higher version - just try it on your own.</p>
 <p>A lot of solutions run with the built-in cryptographic modules but especially the Javascript-ones may need external libraries (pure Javascript will need e.g. &quot;CryptoJs&quot;, NodeJs has a built-in &quot;Crypto&quot; or you can use &quot;node-forge&quot;).</p>
@@ -1362,7 +1460,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </tr>
 </tbody>
 </table>
-<p>Last update: Feb. 09th 2021</p>
+<p>Last update: Feb. 22nd 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
