--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,16 @@ based on dark.css by Vladimir Epifanov
 </thead>
 <tbody>
 <tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_overview.md">JSON web token (JWT) overview</a></td>
+<td>general information about JSON web token</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_structure.md">structure of a JSON web token (JWT)</a></td>
 <td>explains the general structure of a JWT</td>
 <td style="text-align: center;"></td>
@@ -1345,24 +1355,14 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 </tr>
 <tr>
-<td>JSON web encryption (JWE) using RSA-OAEP-256 with A256GCM algorithm</td>
-<td></td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-</tr>
-<tr>
-<td>JSON web encryption (JWE)</td>
-<td></td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
-<td style="text-align: center;">🔜</td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jwe_rsa_oaep_256_encryption.md">JSON web encryption (JWE) using RSA-OAEP-256 with A256GCM algorithm</a></td>
+<td>encrypt a JWT with a RSA key RSA-OAEP-256 and AES-256-GCM algorithm</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 </tbody>
 </table>
@@ -1460,7 +1460,7 @@ based on dark.css by Vladimir Epifanov
 </tr>
 </tbody>
 </table>
-<p>Last update: Feb. 22nd 2021</p>
+<p>Last update: Mar. 02nd 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
