--- a/JwtJwsRs256Signature/jwsrs256signaturessign.html
+++ b/JwtJwsRs256Signature/jwsrs256signaturessign.html
@@ -20,8 +20,8 @@
 <body>
 <h1>JWT RS256 signature RSA PKCS1-5 SHA-256 (signature only) manual</h1>
 <hr><p><b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
-<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_string.md" target="_blank">
-my webpage <b>RSA string signature with PKCS#1.5 padding</b></a><br>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jws_rs256_signature.md" target="_blank">
+my webpage <b>JSON web signature JWS with algorithm RS256 [RSA with PKCS#1.5 padding and SHA-256 hashing]</b></a><br>
 </p><hr>	  
 <p>Insert your own Private Key (in PEM encoding):</p>
 <textarea name="privatekey-value" id="privatekey-value" form= "myform" rows="10" cols="40">-----BEGIN PRIVATE KEY-----
