--- a/JwtJweRsaOaep256Encryption/jwersaoaep256decryption.html
+++ b/JwtJweRsaOaep256Encryption/jwersaoaep256decryption.html
@@ -18,10 +18,10 @@
 	</style>	
 </head>
 <body>
-<h1>V5 ### JWT JWE RSA-OAEP-256 & AES 256 GCM encryption (decryption only)</h1>
+<h1>JWT JWE RSA-OAEP-256 & AES 256 GCM encryption (decryption only)</h1>
 <hr><p><b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
-<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_string.md" target="_blank">
-my webpage <b>RSA string signature with SSA-PSS padding</b></a><br>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jwe_rsa_oaep_256_encryption.md" target="_blank">
+my webpage <b>JSON web encryption JWE with algorithms RSA-OAEP-256 and A256GCM</b></a><br>
 </p><hr>
 <p>insert the jweToken in Base64Url encoding:</p>
 <textarea name="jweTokenBase64Url" id="jweTokenBase64Url" rows="20" cols="40">ewogICAgImFsZyI6ICJSU0EtT0FFUC0yNTYiLAogICAgImVuYyI6ICJBMjU2R0NNIiwKICAgICJ0eXAiOiAiSldUIgp9.SFbnw0tAWPRs29UUtg2_0WjHliBRfRuL1rHB-nP_NPXKcurHlYI2vMEpksEnfQvP8aTk1S6O_BzuA7tw4zYEZNkIsuohi-AH6pmU-vNH3PUIU5-meiFYVGgfIGSb6B6uo7LCm_QW5P6qcpxKdcSXV6-O-lxwX-VI5it0UuyOiVsIj1tSPvXPwxddf2qMo1Grt7F11517Q7VBjcZmI600Pk6tUbka9q6ir-NSHUvX4tk8ZU6epVz6OIs0_iLdnaVankqrUkR0Y4li2n5qDgJs7ZRAFJddojMRQCfxAunSjkKpLfjpt6s-lFVeUrjlGPg7Y68zibaFlCeDSfdYa3jXkQ.-3fq0oKzzCKESpQ9.wl04zuHI_LHr_Bfx13niPBOwfuThELjR80_8qcK62bKgHzGYGnmYFTMfZHQufHiq0tTkhbv4WeQZ2AermLxQ6zYKfilQY1qNToRfe4YcaOO2FjqdJ3GPgVLwTmmMKbQymbGVC7ZYGpajrAABRPxd6blPoUEVrLi8nGqM-xdgEPjMVyBlQP3A_Lh7_EEZXVHmhOUHI2TbwmBddygaeORhviSNhv4_OvvjEwTmQoRHtMuR1wNrrnzBhW8d6LUOU5zUMAD3e0whVu7j6mplTPyAJQw4toCNbteFH5PRnbs.XTfDVtRzq7_b91QyE7LXfw</textarea><br>
