--- a/JwtJweRsaOaep256Encryption/jwersaoaep256encryption.html
+++ b/JwtJweRsaOaep256Encryption/jwersaoaep256encryption.html
@@ -18,10 +18,10 @@
 	</style>	
 </head>
 <body>
-<h1>V5 ### JWT JWE RSA-OAEP-256 & AES 256 GCM encryption (encryption only)</h1>
+<h1>JWT JWE RSA-OAEP-256 & AES 256 GCM encryption (encryption only)</h1>
 <hr><p><b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
-<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_string.md" target="_blank">
-my webpage <b>RSA string signature with SSA-PSS padding</b></a><br>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jwe_rsa_oaep_256_encryption.md" target="_blank">
+my webpage <b>JSON web encryption JWE with algorithms RSA-OAEP-256 and A256GCM</b></a><br>
 </p><hr>	
 <p>collecting data for the payload:</p>
 <p>Enter a subject:</p>
