--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,11 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">several</td>
 </tr>
 <tr>
+<td>algorithms facts overview</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview_algorithm_facts.md">algorithms facts overview</a></td>
+<td style="text-align: center;">several</td>
+</tr>
+<tr>
 <td></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -1408,14 +1413,24 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">Java</td>
 </tr>
 <tr>
+<td>Public key encryption</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_ntru_encryption.md">NTRU</a></td>
+<td style="text-align: center;">Java</td>
+</tr>
+<tr>
 <td></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr>
 <td>key exchange (KEM)</td>
-<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_christalskyber_kem.md">Christals-Kyber</a></td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_chrystalskyber_kem.md">Chrystals-Kyber</a></td>
 <td style="text-align: center;">NodeJs</td>
+</tr>
+<tr>
+<td>key exchange (KEM)</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_sike_kem.md">Sike</a></td>
+<td style="text-align: center;">Java</td>
 </tr>
 <tr>
 <td></td>
@@ -1430,6 +1445,11 @@ based on dark.css by Vladimir Epifanov
 <tr>
 <td>signature</td>
 <td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_rainbow_signature.md">Rainbow</a></td>
+<td style="text-align: center;">Java</td>
+</tr>
+<tr>
+<td>signature</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_sphincs_signature.md">Sphincs</a></td>
 <td style="text-align: center;">Java</td>
 </tr>
 </tbody>
@@ -1528,7 +1548,7 @@ based on dark.css by Vladimir Epifanov
 </tr>
 </tbody>
 </table>
-<p>Last update: Mar. 09th 2021</p>
+<p>Last update: Mar. 11th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
