--- a/index.html
+++ b/index.html
@@ -1393,14 +1393,24 @@ based on dark.css by Vladimir Epifanov
 </thead>
 <tbody>
 <tr>
-<td>overview</td>
-<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview.md">PQC overview</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview.md">PQC overview</a></td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;">several</td>
 </tr>
 <tr>
-<td>algorithms facts overview</td>
-<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview_algorithm_facts.md">algorithms facts overview</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview_algorithm_facts.md">algorithms facts overview</a></td>
+<td style="text-align: center;"></td>
 <td style="text-align: center;">several</td>
+</tr>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_liboqs_overview.md">PQC with Liboqs library overview</a></td>
+<td style="text-align: center;">general overview about the OpenQuantumSafe library</td>
+<td style="text-align: center;"></td>
+</tr>
+<tr>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_overview_algorithm_facts.md">liboqs algorithms facts overview</a></td>
+<td style="text-align: center;">information about key, ciphertext &amp; signature sizes</td>
+<td style="text-align: center;">Java binding</td>
 </tr>
 <tr>
 <td></td>
@@ -1433,6 +1443,11 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">Java</td>
 </tr>
 <tr>
+<td>key exchange (KEM)</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_sike_liboqs_kem.md">Sike with Liboqs</a></td>
+<td style="text-align: center;">Java</td>
+</tr>
+<tr>
 <td></td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -1441,6 +1456,11 @@ based on dark.css by Vladimir Epifanov
 <td>signature</td>
 <td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_falcon_signature.md">FALCON</a></td>
 <td style="text-align: center;">Python</td>
+</tr>
+<tr>
+<td>signature</td>
+<td style="text-align: center;"><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/pqc_falcon_liboqs_signature.md">FALCON with Liboqs</a></td>
+<td style="text-align: center;">Java binding</td>
 </tr>
 <tr>
 <td>signature</td>
@@ -1548,7 +1568,7 @@ based on dark.css by Vladimir Epifanov
 </tr>
 </tbody>
 </table>
-<p>Last update: Mar. 11th 2021</p>
+<p>Last update: Mar. 19th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
